--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="/Users/markpunzal/Desktop/WebDev/HTML Personal Website/mark.png" alt="Mark Punzal profile pic" height="220" width="220">
+        <img src="mark.png" alt="Mark Punzal profile pic" height="220" width="220">
       </td>
       <td>
         <h1>Mark Punzal</h1>
